<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/main_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"


>


    <LinearLayout
            android:id="@+id/emailPasswordFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/imageback"
            android:orientation="vertical"
            android:paddingLeft="@dimen/icon_between_margin"
            android:paddingRight="@dimen/icon_between_margin">

        <EditText
            android:id="@+id/fieldEmail"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="@dimen/button_size_height"
            android:layout_gravity='top'
            android:layout_marginLeft="48dp"
            android:layout_marginTop="144dp"
            android:autofillHints="@string/hint_email"
            android:background="@drawable/button2"
            android:drawableTint="#FFFFFF"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="#FDFDFD"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/fieldPassword"
            style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="@dimen/button_size_height"
            android:layout_gravity='bottom'
            android:layout_marginLeft="48dp"
            android:layout_marginTop="12dp"
            android:autofillHints="@string/hint_password"
            android:background="@drawable/button2"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="#FDFDFD"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="14sp" />

        <Button
                android:id="@+id/emailSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/button_size_width"
                android:layout_height="@dimen/button_size_height"
                android:layout_gravity='center'
                android:layout_marginStart="@dimen/icon_between_margin"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="@dimen/icon_between_margin"
                android:background="@drawable/button"
                android:text="@string/sign_in"
                android:textColor="#CCFFFFFF"
                android:textColorHint="#00FFFFFF"
                android:textColorLink="@color/white"
                android:textSize="@dimen/text_size"
                android:theme="@style/ThemeOverlay.MyDarkButton"/>

        <Button
            android:id="@+id/emailCreateAccountButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/button_size_width"
            android:layout_height="@dimen/button_size_height"
            android:layout_gravity='center'
            android:layout_marginStart="@dimen/icon_between_margin"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/icon_between_margin"
            android:background="@drawable/button2"
            android:text="Register now"
            android:textColor="#CCFFFFFF"

            android:textColorHint="#00FFFFFF"
            android:textSize="14sp"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/emailForgotBottom"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/button_size_width"
            android:layout_height="@dimen/button_size_height"
            android:layout_marginTop="24dp"
            android:layout_gravity='center'
            android:layout_marginStart="@dimen/icon_between_margin"
            android:layout_marginEnd="@dimen/icon_between_margin"
            android:background="@drawable/button2"
            android:text="@string/ForgotPassword"
            android:textColor="#CCFFFFFF"

            android:textColorHint="#00FFFFFF"
            android:textSize="14sp"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
    </LinearLayout>


    <LinearLayout
            android:id="@+id/emailPasswordButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/icon_between_margin"
            android:paddingRight="@dimen/icon_between_margin">

    </LinearLayout>

</LinearLayout>